--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>3.45</version>
+        <version>3.48</version>
         <relativePath />
     </parent>
     <groupId>io.jenkins.plugins</groupId>
@@ -59,4 +59,9 @@
         <version>1.1</version>  
       </dependency>      
     </dependencies>
+	<scm>
+	  <connection>scm:git:ssh://github.com/jenkinsci/reqtify-plugin.git</connection>
+	  <developerConnection>scm:git:ssh://git@github.com/jenkinsci/reqtify-plugin.git</developerConnection>
+	  <url>https://github.com/jenkinsci/reqtify-plugin</url>
+	</scm>	
 </project>
