--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>reqtify</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>hpi</packaging>
     <properties>
         <jenkins.version>2.7.3</jenkins.version>
@@ -63,5 +63,6 @@
 	  <connection>scm:git:ssh://github.com/jenkinsci/reqtify-plugin.git</connection>
 	  <developerConnection>scm:git:ssh://git@github.com/jenkinsci/reqtify-plugin.git</developerConnection>
 	  <url>https://github.com/jenkinsci/reqtify-plugin</url>
-	</scm>	
+	  <tag>reqtify-0.0.1</tag>
+  </scm>	
 </project>
