--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>reqtify</artifactId>
-    <version>0.9.7-SNAPSHOT</version>
+    <version>0.9.3-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
-        <jenkins.version>2.7.3</jenkins.version>
+        <jenkins.version>2.138.4</jenkins.version>
         <java.level>8</java.level>    
     </properties>
     <name>Reqtify Plugin</name>
@@ -58,6 +58,13 @@
         <artifactId>json-simple</artifactId>  
         <version>1.1</version>  
       </dependency>      
+    <!-- https://mvnrepository.com/artifact/org.jenkins-ci.plugins.workflow/workflow-api -->
+    <dependency>
+        <groupId>org.jenkins-ci.plugins.workflow</groupId>
+        <artifactId>workflow-api</artifactId>
+        <version>2.18</version>
+    </dependency>
+      
     </dependencies>
 	<scm>
 	  <connection>scm:git:ssh://github.com/jenkinsci/reqtify-plugin.git</connection>
