--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
         <version>4.6</version>
-        <relativePath />
+        <relativePath>..</relativePath>
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>reqtify</artifactId>
