Changes to be committed:  modified:   pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
   </scm>
 
   <properties>
+    <revision>0.9.3</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.414.3</jenkins.version>
     <gitHubRepo>jenkinsci/reqtify-plugin</gitHubRepo>
