--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>reqtify</artifactId>
+  <version>${revision}-${changelist}</version>
   <packaging>hpi</packaging>
 
   <name>Reqtify Plugin</name>
@@ -37,7 +38,7 @@
   </scm>
 
   <properties>
-    <revision>0.9.3</revision>
+    <revision>1.0</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.414.3</jenkins.version>
     <gitHubRepo>jenkinsci/reqtify-plugin</gitHubRepo>
