--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,17 @@
     <url>https://github.com/jenkinsci/reqtify-plugin</url>
   </scm>
 
+  <distributionManagement>
+    <repository>
+      <id>maven.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>maven.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <properties>
     <revision>1.0</revision>
     <changelist>-SNAPSHOT</changelist>
