--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,13 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.80</version>
+    <version>4.64</version>
     <relativePath />
   </parent>
 
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>reqtify</artifactId>
-  <version>3.0.2-SNAPSHOT</version>
-  <packaging>hpi</packaging>
+  <version>${revision}-${changelist}</version>
 
   <name>Reqtify Plugin</name>
   <url>https://wiki.jenkins.io/display/JENKINS/Reqtify+Plugin</url>
@@ -36,6 +35,17 @@
     <tag>HEAD</tag>
     <url>https://github.com/jenkinsci/reqtify-plugin</url>
   </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>maven.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>maven.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <properties>
     <revision>1.0</revision>
