Supportng 32 and 64 bit Reqtify  Changes to be committed: 	modified:   Jenkinsfile 	modified:   pom.xml 	modified:   src/main/java/io/jenkins/plugins/Utils.java
	deleted:    pom.xml.releaseBackup
	deleted:    release.properties

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>reqtify</artifactId>
   <version>${revision}-${changelist}</version>
+  <packaging>hpi</packaging>
 
   <name>Reqtify Plugin</name>
   <url>https://wiki.jenkins.io/display/JENKINS/Reqtify+Plugin</url>
@@ -36,7 +37,7 @@
     <tag>HEAD</tag>
     <url>https://github.com/jenkinsci/reqtify-plugin</url>
   </scm>
-  
+
   <properties>
     <revision>1.0</revision>
     <changelist>-SNAPSHOT</changelist>
