--- a/release.properties
+++ b/release.properties
@@ -1,24 +1,27 @@
 #release configuration
-#Wed Aug 21 10:17:02 IST 2024
+#Wed Oct 23 14:30:35 IST 2024
 projectVersionPolicyId=default
+scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
+pinExternals=false
+project.scm.io.jenkins.plugins\:reqtify.tag=HEAD
+projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
+pushChanges=true
+project.scm.io.jenkins.plugins\:reqtify.connection=scm\:git\:ssh\://github.com/jenkinsci/reqtify-plugin.git
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
 releaseStrategyId=default
-scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
 project.scm.io.jenkins.plugins\:reqtify.url=https\://github.com/jenkinsci/reqtify-plugin
-pinExternals=false
-project.scm.io.jenkins.plugins\:reqtify.tag=HEAD
-completedPhase=create-backup-poms
+completedPhase=generate-release-poms
 scm.url=scm\:git\:ssh\://git@github.com/jenkinsci/reqtify-plugin.git
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
-projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 exec.additionalArguments=
 project.scm.io.jenkins.plugins\:reqtify.developerConnection=scm\:git\:ssh\://git@github.com/jenkinsci/reqtify-plugin.git
-pushChanges=true
+scm.tag=reqtify-4.0.0
+project.rel.io.jenkins.plugins\:reqtify=4.0.0
+project.dev.io.jenkins.plugins\:reqtify=4.0.1-SNAPSHOT
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean install
-project.scm.io.jenkins.plugins\:reqtify.connection=scm\:git\:ssh\://github.com/jenkinsci/reqtify-plugin.git
 scm.releaseCommitComment=@{prefix} prepare release @{releaseLabel}
 exec.pomFileName=pom.xml
